<resources>
    <string name="app_name">Diet Scoop</string>
    <string name="recipe_image_description">Image that would show the final result after making the recipe.</string>
    <string name="recipe_title_default">Recipe</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="recipe_label_prep_time">Prep Time</string>
    <string name="recipe_label_no_of_servings">Servings</string>
    <string name="category_label">Category</string>
    <string name="filler">default</string>
    <string name="add_label">Add</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="name_label">Name</string>
    <string name="amount_label">Amount</string>
    <string name="unit_label">Unit</string>
    <string name="instructions_label">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Appetizer</item>
        <item>Dessert</item>
        <item>Holiday</item>
        <item>Beverages</item>
        <item>Baked</item>

    </string-array>

    <string-array name="prepUnitTime">
        <item>min</item>
        <item>hr</item>
    </string-array>

    <string-array name="IngredientInStorageLocation">
        <item>Select</item>
        <item>Pantry</item>
        <item>Freezer</item>
        <item>Fridge</item>
    </string-array>

    <string-array name="IngredientInStorageCategory">
        <item>Select</item>
        <item>Vegetable</item>
        <item>Meat</item>
        <item>Dairy</item>
        <item>Grains</item>
        <item>Oils</item>
        <item>Spices</item>
        <item>Fruit</item>
        <item>Other</item>

    </string-array>

    <string-array name="IngredientInStorageUnit">
        <item>Lb</item>
        <item>Oz</item>
        <item>Kg</item>
        <item>g</item>
        <item>mg</item>
        <item>L</item>
        <item>mL</item>
        <item>Cup</item>
        <item>Tbsp</item>
        <item>Tsp</item>
    </string-array>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>