<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:contentDescription="@string/recipe_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ExtraText,ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:text="@string/recipe_title_default" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/recipe_modify_button"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/button"
                        app:backgroundTint="#D9D9D9"
                        android:paddingVertical="0dp"
                        android:text="@string/modify_button"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/recipe_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button"
                        android:paddingVertical="0dp"
                        android:text="@string/delete_button"
                        android:textColor="#3E2723"
                        android:textSize="11sp"
                        app:backgroundTint="#FF6565"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    <Button
                        android:id="@+id/recipe_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="Confirm"
                        android:layout_marginTop="10dp"
                        android:textSize="11sp"/>

                </LinearLayout>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/recipe_label_prep_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:text="@string/recipe_label_prep_time"/>
                    <TextView
                        android:id="@+id/recipe_label_no_of_servings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:text="@string/recipe_label_no_of_servings"/>

                    <TextView
                        android:id="@+id/recipe_label_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:text="@string/category_label"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/recipe_prep_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/filler"/>
                    <TextView
                        android:id="@+id/recipe_no_of_servings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/filler"/>
                    <TextView
                        android:id="@+id/recipe_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/filler"/>

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/ingredients_label"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="26sp"/>

                <Button
                    android:id="@+id/recipe_add_ingredient_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:text="@string/add_label"
                    android:textColor="#000000"
                    android:textSize="11sp"
                    app:backgroundTint="#D9D9D9"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/name_label"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/amount_label"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/unit_label"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/category_label"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="100dp" >

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/instructions_label"
                    android:textColor="#000000"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/recipe_add_comment_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:text="@string/add_label"
                    android:textColor="#000000"
                    android:textSize="11sp"
                    app:backgroundTint="#D9D9D9"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/recipe_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>